--- a/Scripts/css/games.css
+++ b/Scripts/css/games.css
@@ -90,8 +90,12 @@
   height: 5px !important;
 }
 
+.game-row__infos .versus .player i {
+  margin-right: 0.75rem !important;
+}
+
 /* Activity entry icons */
-.activity .entries .entry i {
+.activity .entries .entry i:not(.activity .entries .entry * i) {
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
@@ -101,7 +105,7 @@
   position: relative !important;
 }
 
-.activity .entries .entry i::before {
+.activity .entries .entry i:not(.activity .entries .entry * i)::before {
   font-size: var(--font-size-xl) !important;
   /* The parent is already a flex container with centering properties */
 }
