--- a/Scripts/css/styles.css
+++ b/Scripts/css/styles.css
@@ -625,8 +625,16 @@ main.page-menu:has(.subnav):has(.page-menu__content) .page-menu__content {
 
 /*#########*/
 
-.tview2 move.good.active {
-  background: var(--m-good_bg--mix-25) !important;
+.tview2-inline move.active.brilliant, .tview2 line move.active.brilliant {
+  outline: 2px solid var(--m-brilliant_bg--mix-60) !important;
+}
+
+.tview2 move.brilliant:hover, .tview2 move.brilliant:hover index, .tview2 move.brilliant:hover eval {
+  background: var(--c-brilliant) !important;
+}
+
+.tview2-inline move.active.good, .tview2 line move.active.good {
+  outline: 2px solid var(--m-good_bg--mix-60) !important;
 }
 
 .tview2 move.good.active {
