--- a/Scripts/css/styles.css
+++ b/Scripts/css/styles.css
@@ -630,7 +630,7 @@ main.page-menu:has(.subnav):has(.page-menu__content) .page-menu__content {
 }
 
 .tview2-inline move.active.brilliant, .tview2 line move.active.brilliant {
-  outline: 2px solid color-mix(in oklab, #1bada6 60%, var(--surfaceColor)) !important;
+  outline: 2px solid color-mix(in oklab, #1bada6 75%, var(--surfaceColor)) !important;
 }
 
 .tview2 move.brilliant.active {
@@ -661,12 +661,17 @@ main.page-menu:has(.subnav):has(.page-menu__content) .page-menu__content {
   background: var(--m-mistake_bg--mix-25) !important;
 }
 
+.tview2-inline move.inaccuracy:not(.active), .tview2 move.inaccuracy:not(.active), .tview2 line move.inaccuracy:not(.active) {
+  color: #F7C631 !important;
+}
+
 .tview2-inline move.active.inaccuracy, .tview2 line move.active.inaccuracy {
-  outline: 2px solid var(--m-inaccuracy_bg--mix-60) !important;
+  outline: 2px solid color-mix(in oklab, #F7C631 75%, var(--surfaceColor)) !important;
 }
 
 .tview2 move.inaccuracy.active {
-  background: var(--m-inaccuracy_bg--mix-25) !important;
+  background: color-mix(in oklab, #F7C631 25%, var(--surfaceColor)) !important;
+  color: var(--textColor) !important;
 }
 
 .tview2-inline move.active.interesting, .tview2 line move.active.interesting {
