--- a/Scripts/css/styles.css
+++ b/Scripts/css/styles.css
@@ -190,7 +190,8 @@ span.cloud {
 }
 
 .analyse__underboard * {
-  font-family: "Red Hat Text", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: 400 !important;
 }
 
 .acpl-chart-container-loader span {
